# pill-classification

./: .gitignore  README.md  requirements.txt  setup.cfg  setup.sh
artifacts/reference_1-1000/: reference-gpt-extracted-features-n=1000.json
data/: api_keys.json  consumer_list.txt  consumer_list_1000.txt  exp_metadata.csv  exp_metadata_1000.csv  extra_exp_metadata.csv  reference_list.txt  reference_list_1000.txt
data/consumers/: C3PI_Test.txt
data/db/qdrant/: meta.json
data/metadata/: README  descriptions.json  directory_reference_images.csv  directory_reference_images_updated.csv
data/metadata/all_metadata/: PillProjectDisc1.json  PillProjectDisc10.json  PillProjectDisc100.json  PillProjectDisc101.json  PillProjectDisc102.json  PillProjectDisc103.json  PillProjectDisc104.json  PillProjectDisc105.json  PillProjectDisc106.json  PillProjectDisc107.json  PillProjectDisc108.json  PillProjectDisc109.json  PillProjectDisc11.json  PillProjectDisc110.json  PillProjectDisc12.json  PillProjectDisc13.json  PillProjectDisc14.json  PillProjectDisc15.json  PillProjectDisc16.json  PillProjectDisc17.json  PillProjectDisc18.json  PillProjectDisc19.json  (+88 more)
metadata/: AAREADME  rximage.MD5
notebooks/: basic_eda.ipynb  database.ipynb  database_creation.ipynb  extract_text.ipynb  nih_download.ipynb  prepare_data.ipynb
src/: config.py  utils.py
src/callbacks/: __init__.py  counter.py
src/custom/: embeddings.py  index.py  multi_model_llms.py
src/metrics/: metrics.py
src/utils/: __init__.py  database.py  experiment.py  io.py  metrics.py  openai.py  visualization.py
(+6 files in other folders)
