[metadata]
name = Pill Recognition using Vision Language Model
version = 0.0.1
author = Le Quan
description = Prototyping Pill Recognition Pipeline with VLM, RAG and Vision-Text Representation Models

[options]
python_requires = >=3.7, <4
package_dir=
    =src
packages=find:

[options.packages.find]
where=src